Add theme support, improve theming and persistence
Introduces multiple Angular Material themes with custom palettes and SCSS theming infrastructure. Updates layout and home components to use theme-aware styles and variables. Adds theme and language persistence using localStorage. Refactors routing to use resolvers and improves menu and language selection UI. Updates ESLint config, scripts, and VSCode settings for better development workflow.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,11 @@
     "test": "ng test",
     "images:compress": "node tools/compress-images.mjs",
     "serve:ssr:frontend": "node dist/frontend/server/server.mjs",
-    "lint": "ng lint"
+    "lint": "npx eslint . --ext .ts,.html",
+    "typecheck": "tsc -p tsconfig.json --noEmit",
+    "build:web": "npx ng build --configuration development --no-progress",
+    "build:api": "npx nest build",
+    "verify": "npm run lint && npm run typecheck && npm run build:web && npm run build:api"
   },
   "prettier": {
     "overrides": [
