--- a/frontend/.vscode/tasks.json
+++ b/frontend/.vscode/tasks.json
@@ -3,6 +3,13 @@
   "version": "2.0.0",
   "tasks": [
     {
+      "label": "Verify",
+      "type": "shell",
+      "command": "npm run verify",
+      "problemMatcher": ["$eslint-stylish", "$tsc"],
+      "presentation": { "reveal": "always", "panel": "dedicated" }
+    },
+    {
       "type": "npm",
       "script": "start",
       "isBackground": true,
