Add security and testing rules, update theming and navigation
Introduces comprehensive security (.cursor/rules/security.mdc) and testing (.cursor/rules/testing.mdc) guardrails. Refactors Angular theming for clarity and consistency, updates navigation and menu rendering in layout, and improves Swiper initialization and testing in the home component. Adds i18n assets, adjusts Angular config to include assets, and updates dependencies to include zone.js. Enhances unit tests for home and layout components.

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -33,6 +33,10 @@
               },
               {
                 "glob": "**/*",
+                "input": "src/assets"
+              },
+              {
+                "glob": "**/*",
                 "input": "../server/uploads",
                 "output": "uploads"
               }
