--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,7 +44,8 @@
     "express": "^5.1.0",
     "rxjs": "~7.8.0",
     "swiper": "^11.2.10",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "zone.js": "^0.15.1"
   },
   "devDependencies": {
     "@angular/build": "^20.1.5",
