Refactor theming to use palette-based Angular Material themes
Introduces a ThemeService for reactive theme management and updates the theming system to use palette-based Angular Material 3 themes (rose-red, azure-blue, magenta-violet, cyan-orange). Updates SCSS and HTML to support dynamic theme switching, improves theme menu UI, and adds CSS variable support for Material tokens. Removes legacy theme code and centralizes theme logic for maintainability.

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -36,6 +36,11 @@
                 "input": "src/assets"
               },
               {
+                "glob": "*.css",
+                "input": "node_modules/@angular/material/prebuilt-themes",
+                "output": "themes/material"
+              },
+              {
                 "glob": "**/*",
                 "input": "../server/uploads",
                 "output": "uploads"
