Migrate UI to Angular Material and refactor theming
Replaces Material Web Components with Angular Material across layout, home, and page components. Adds custom theme definitions using Angular Material v20 API and removes legacy theme SCSS files. Updates component templates and styles to use Angular Material elements (mat-card, mat-toolbar, mat-sidenav, mat-menu, mat-tabs, etc.), and refactors logic for navigation, theming, and language selection. Adds new page components for About, Articles, Contact, Pricing, Products, Projects, and Quote, each using Angular Material. Updates dependencies to include @angular/material and removes @material/web. Improves responsive layout and UI consistency.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,12 +33,12 @@
     "@angular/compiler": "^20.1.0",
     "@angular/core": "^20.1.0",
     "@angular/forms": "^20.1.0",
+    "@angular/material": "^20.1.5",
     "@angular/platform-browser": "^20.1.0",
     "@angular/platform-server": "^20.1.0",
     "@angular/router": "^20.1.0",
     "@angular/ssr": "^20.1.5",
     "@material/material-color-utilities": "^0.3.0",
-    "@material/web": "^2.3.0",
     "@ngx-translate/core": "^17.0.0",
     "@ngx-translate/http-loader": "^17.0.0",
     "angular-in-memory-web-api": "^0.20.0",
